Completed bin and anal plugins (#1)
* initial analysis code

* Finished opcode types

Still need to do esil commands

* MC81F4204 analysis make file

* changed BRK type to SWI

* Added cycle, and mem access type

* Finished analysis without esil

* Added bin format for MC81F4204

* Added default symbols and sections for MC81F4204

* Added a bin plugin

* fixed addr error for call instruction

--- a/plugins.def.cfg
+++ b/plugins.def.cfg
@@ -47,6 +47,7 @@ anal.riscv
 anal.pic
 anal.rsp
 anal.wasm
+anal.MC81F4204
 asm.8051
 asm.6502
 asm.6502_cs
@@ -163,6 +164,7 @@ bin_xtr.xtr_pemixed
 bin_ldr.ldr_linux
 bin.zimg
 bin.psxexe
+bin.MC81F4204
 bp.arm
 bp.bf
 bp.mips
