Fixes to allow building on Windows (MSVC)
Build:
# Using VS Shell, in r2 base directory:
$ meson build --buildtype debug --backend vs2019 --prefix $R2_PATH\dest
$ msbuild build\radare2.sln /p:Configuration=Debug /m
$ meson install -C build --no-rebuild

Run:
# in dest\bin\
$ radare2.exe -a MC81F4204 input.bin

--- a/libr/anal/meson.build
+++ b/libr/anal/meson.build
@@ -84,6 +84,7 @@ r_anal_sources = [
   'p/anal_x86_cs.c',
   'p/anal_xap.c',
   'p/anal_xcore_cs.c',
+  'p/anal_MC81F4204.c',
   'p/anal_xtensa.c',
   'p/anal_z80.c',
   #'arch/gb/meta_gb_cmt.c',
@@ -110,6 +111,7 @@ r_anal_sources = [
   '../asm/arch/v810/v810_disas.c',
   '../asm/arch/v850/v850_disas.c',
   '../asm/arch/wasm/wasm.c',
+  '../asm/arch/MC81F4204/MC81F4204_disas.c',
   '../asm/arch/xtensa/gnu/xtensa-dis.c',
   '../asm/arch/xtensa/gnu/elf32-xtensa.c',
   '../asm/arch/xtensa/gnu/xtensa-isa.c',
