--- a/libr/asm/meson.build
+++ b/libr/asm/meson.build
@@ -66,6 +66,7 @@ r_asm_sources = [
   #'p/asm_x86_vm.c',
   'p/asm_xap.c',
   'p/asm_xcore_cs.c',
+  'p/asm_MC81F4204.c',
   'p/asm_xtensa.c',
   'p/asm_z80.c',
   #'arch/6502/6502dis.c',
@@ -146,6 +147,7 @@ r_asm_sources = [
   'arch/wasm/wasm.c',
   'arch/whitespace/wsdis.c',
   #'arch/xap/dis.c',
+  'arch/MC81F4204/MC81F4204_disas.c',
   'arch/xtensa/gnu/elf32-xtensa.c',
   'arch/xtensa/gnu/xtensa-dis.c',
   'arch/xtensa/gnu/xtensa-isa.c',
